# Alice-Platform

./: .cline.mcp.json  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  FIX_PLAN.md  INSTRUCTION.md  PROJECT_CONTEXT.md  PROJECT_WEB_CONTEXT.md  PROJECT_WX_CONTEXT.md  README.md  REPAIR_REPORT.md  analyze_failures.py  docker-compose.yml  package-lock.json  project_tree.txt  pyproject.toml  run_dcs_sop.py  run_personnel_phase1.py  run_sop_fixed.py  sop_output_warehouse.txt  test_hio_output.txt  test_payload.json  test_requirement_v2_output.txt
.claude/: mcp.json  settings.json
ZJSN_Test-master526/: .dockerignore  .env.example  .gitignore  AI辅助测试开发治理规范.md  API_TESTING.md  AUTOMATION_ARCHITECTURE.md  Jenkinsfile  REFACTOR_PLAN.md  TEST_SUMMARY_system-user_user-list_2026-06-14.md  clean.bat  conftest.py  debug_login_page.html  init_api_testing.py  menu_debug.json  overnight_results.txt  page_analysis.txt  page_diag.json  page_structure.json  page_structure_role.json  page_structure_role_perm_dialog.json  perm_debug.json  perm_dialog_debug.json  perm_tab_datascope.json  perm_tab_pc.json  perm_tree_deep.json  pytest.ini  requirements.txt  role_assign_user_dialog.json  roles_debug.json  run_all.py  run_all_tests.bat  run_smoke.bat  run_smoke.ps1  sidebar_debug.html  user_form_add_dialog.json  user_form_assign_role_dialog.json  user_form_edit_dialog.json  user_form_view_dialog.json
aitest/: __init__.py  ab_test.py  agent_benchmark.py  agent_runner.py  agent_scheduler.py  bu_adapter.py  bug_history.py  cli.py  config.py  consistency_checker.py  cost_advisor.py  (+23 more)
(+2905 files in other folders)
