[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aitest"
version = "0.2.0"
description = "AI 自动化测试平台 — 去平台化 CLI 工具包"
requires-python = ">=3.10"
dependencies = [
    # Web framework
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    # Data validation
    "pydantic>=2.0",
    # Database
    "sqlalchemy>=2.0",
    "chromadb>=0.4.0",
    # AI / LLM
    "langgraph>=0.2.0",
    "anthropic>=0.30.0",
    "openai>=1.0",
    # Config & serialization
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    # HTTP
    "httpx>=0.27.0",
    # Optional: browser automation
    "browser-use>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
metrics = [
    "prometheus-client>=0.19.0",
]
otel = [
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20",
]

[project.scripts]
aitest = "aitest.cli:main"

[tool.setuptools.packages.find]
include = ["aitest*"]
